# dspace-mcp

./: .gitignore  .mcpbignore  .pre-commit-config.yaml  CLAUDE.md  README.md  manifest.json  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  mcpb.yml  publish.yml
docs/superpowers/plans/: 2026-07-23-multiformat-text-extraction.md
docs/superpowers/specs/: 2026-07-22-dspace-mcp-read-only-design.md  2026-07-23-multiformat-text-extraction-design.md  2026-07-24-optional-read-authentication-design.md
mcpb/: launch.py
src/dspace_mcp/: __init__.py  client.py  config.py  pdf.py  server.py  shaping.py  tools.py
src/dspace_mcp/extractors/: __init__.py  base.py  msword.py  ooxml.py  opendocument.py  pdf.py
tests/: conftest.py  office_samples.py  test_client.py  test_config.py  test_extractors.py  test_live.py  test_pdf.py  test_server.py  test_shaping.py  test_tools.py
tests/fixtures/: README.md  dspace10_401_malformed_uuid.json  dspace10_404.json  dspace10_authn_login_401.json  dspace10_authn_status_anonymous.json  dspace10_authn_status_authenticated.json  dspace10_authn_status_headers.txt  dspace10_bitstreamformat.json  dspace10_bitstreams.json  dspace10_bundles.json  dspace10_communities_top.json  dspace10_community_collections.json  dspace10_facets.json  dspace10_facets_author.json  dspace10_item.json  dspace10_item_identifiers.json  dspace10_pid_find_headers.txt  dspace10_root.json  dspace10_root_headers.txt  dspace10_search_objects.json  dspace10_search_objects_page1.json  dspace10_usagereport_totalvisits.json  dspace11_root.json  dspace7_root.json  dspace7_search_objects.json  dspace8_root.json  dspace9_authn_login_403_csrf.json  dspace9_authn_login_403_csrf_headers.txt  dspace9_authn_status_headers.txt
